better hexagonal implementation with mapper