@@ -3,6 +3,7 @@ package com.cleveritgroup.orderdivider.framework.adapter.mongo.repository;
 import com.cleveritgroup.orderdivider.core.domain.DeliveryCost;
 import com.cleveritgroup.orderdivider.core.port.DeliveryCostRepositoryPort;
 import com.cleveritgroup.orderdivider.framework.adapter.mongo.dto.DeliveryCostDto;
+import com.cleveritgroup.orderdivider.framework.adapter.mongo.mapper.Mapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
@@ -17,27 +18,11 @@ public class DeliveryCostRepositoryAdapter implements DeliveryCostRepositoryPort
 
     @Override
     public List<DeliveryCost> findDeliveryCosts(List<String> fromZoneIds, String zoneId) {
-        return deliveryCostRepository.findDeliveryCosts(fromZoneIds, zoneId).stream().map(this::toDomain).collect(Collectors.toList());
+        return deliveryCostRepository.findDeliveryCosts(fromZoneIds, zoneId).stream().map(Mapper::toDomain).toList();
     }
 
     @Override
     public void saveAll(List<DeliveryCost> deliveryCosts) {
-        deliveryCostRepository.saveAll(deliveryCosts.stream().map(this::toDTO).toList());
-    }
-
-    private DeliveryCostDto toDTO(DeliveryCost deliveryCost) {
-        return DeliveryCostDto.builder()
-                .fromZoneId(deliveryCost.getFromZoneId())
-                .toZoneId(deliveryCost.getToZoneId())
-                .cost(deliveryCost.getCost())
-                .build();
-    }
-
-    private DeliveryCost toDomain(DeliveryCostDto deliveryCostDto) {
-        return DeliveryCost.builder()
-                .fromZoneId(deliveryCostDto.getFromZoneId())
-                .toZoneId(deliveryCostDto.getToZoneId())
-                .cost(deliveryCostDto.getCost())
-                .build();
+        deliveryCostRepository.saveAll(deliveryCosts.stream().map(Mapper::toDTO).toList());
     }
 }
